<package format="2">
    <name>centerline-tracer</name>
    <version>0.1.0</version>
    <description>centerline-tracer</description>

    <maintainer email="mgskwon@gmail.com">mingukwon</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>rostest</build_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>rostest</exec_depend>
</package>
